--- a/package.json
+++ b/package.json
@@ -23,7 +23,28 @@
   },
   "homepage": "https://github.com/remojansen/remojansen.github.io",
   "devDependencies": {
-    "browser-sync": "^2.3.1",
-    "gulp": "^3.8.11"
+    "browser-sync": "^2.2.2",
+    "mocha": "^2.1.0",
+    "chai": "^2.1.1",
+    "sinon": "^1.13.0",
+    "gulp": "^3.8.11",
+    "gulp-jsonlint": "^1.0.2",
+    "gulp-karma": "0.0.4",
+    "gulp-minify-css": "^1.0.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-coverage": "^0.2.7",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sinon": "^1.0.4",
+    "run-sequence": "^1.0.2"
+  },
+  "peerDependencies": {
+    "chai": "^2.1.1",
+    "mocha": "^2.1.0",
+    "sinon": "^1.13.0",
+    "karma": "^0.12.31",
+    "gulp": "^3.8.11",
+    "browser-sync": "^2.2.2"
   }
 }
