--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,9 @@
     "google-code-prettify": "~1.0.4",
     "fontawesome": "~4.3.0",
     "slideout": "https://github.com/Mango/slideout.git#~0.1.5",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "jquery": "~2.1.3",
+    "animate.css": "~3.2.5"
   },
   "resolutions": {
     "ember": "~1.10.0"
