--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "slideout": "https://github.com/Mango/slideout.git#~0.1.5",
     "moment": "~2.9.0",
     "jquery": "~2.1.3",
-    "animate.css": "~3.2.5"
+    "animate.css": "~3.2.5",
+    "bluebird": "~2.9.14"
   },
   "resolutions": {
     "ember": "~1.10.0"
