--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp": "^3.8.11",
     "gulp-jshint": "^1.9.4",
     "gulp-jsonlint": "^1.0.2",
+    "gulp-requirejs": "^0.1.3",
+    "gulp-uglify": "^1.1.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.1.10",
