moving install commands to install phase

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-before_script:
-  - npm install -g bower
-  - npm install -g tsd
 language: node_js
 node_js:
   - "0.10"
+install:
+  - npm install
+  - npm install -g bower
+  - npm install -g tsd
