Some  content updates

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "ower89.github.io",
+  "name": "remojansen.github.io",
   "version": "0.0.0",
-  "homepage": "www.remojansen.com",
+  "homepage": "http://www.remojansen.com",
   "authors": [
     "Remo H. Jansen remo.jansen@wolksoftware.com"
   ],
