--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Remo H. Jansen personal website",
   "main": "",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "release": "gulp bundle"
   },
   "repository": {
     "type": "git",
@@ -23,30 +24,22 @@
   },
   "homepage": "https://github.com/remojansen/remojansen.github.io",
   "devDependencies": {
-    "browser-sync": "^2.2.2",
-    "chai": "^2.1.1",
-    "gulp": "^3.8.11",
-    "gulp-jshint": "^1.9.4",
-    "gulp-jsonlint": "^1.0.2",
-    "gulp-requirejs": "^0.1.3",
-    "gulp-uglify": "^1.1.0",
-    "karma": "^0.12.31",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.2",
-    "karma-sinon": "^1.0.4",
-    "mocha": "^2.1.0",
-    "requirejs": "^2.1.16",
-    "run-sequence": "^1.0.2",
-    "sinon": "^1.13.0"
-  },
-  "peerDependencies": {
-    "chai": "^2.1.1",
-    "mocha": "^2.1.0",
-    "sinon": "^1.13.0",
-    "karma": "^0.12.31",
-    "gulp": "^3.8.11",
-    "browser-sync": "^2.2.2"
+    "browser-sync": "2.23.5",
+    "chai": "4.1.2",
+    "gulp": "3.9.1",
+    "gulp-jshint": "2.1.0",
+    "gulp-jsonlint": "1.2.1",
+    "gulp-requirejs": "1.1.1",
+    "gulp-uglify": "3.0.0",
+    "karma": "2.0.0",
+    "karma-chai": "0.1.0",
+    "karma-mocha": "1.3.0",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-requirejs": "1.1.0",
+    "karma-sinon": "1.0.5",
+    "mocha": "4.1.0",
+    "requirejs": "2.3.5",
+    "run-sequence": "2.2.1",
+    "sinon": "4.1.4"
   }
 }
