--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "test": "gulp test",
-    "release": "gulp bundle"
+    "release": "node ./node_modules/requirejs/bin/r.js -o build.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "gulp-jsonlint": "1.2.1",
     "gulp-requirejs": "1.1.1",
     "gulp-uglify": "3.0.0",
+    "jshint": "2.9.5",
     "karma": "2.0.0",
     "karma-chai": "0.1.0",
     "karma-mocha": "1.3.0",
