--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
 		"@types/stats.js": "^0.17.4",
 		"@xterm/xterm": "^6.0.0",
 		"stats.js": "^0.17.0",
-		"three": "^0.182.0",
-		"xterm": "^5.3.0"
+		"three": "^0.182.0"
 	}
 }
