--- a/package.json
+++ b/package.json
@@ -3,24 +3,9 @@
 	"version": "1.0.0",
 	"description": "A WebGL-based CRT terminal renderer for XTerm.js with authentic retro effects",
 	"type": "module",
-	"main": "dist/lib/index.cjs",
-	"module": "dist/lib/index.js",
-	"types": "dist/lib/index.d.ts",
-	"exports": {
-		".": {
-			"types": "./dist/lib/index.d.ts",
-			"import": "./dist/lib/index.js",
-			"require": "./dist/lib/index.cjs"
-		}
-	},
-	"files": [
-		"dist/lib"
-	],
 	"scripts": {
-		"build": "npm run generate-assets && tsup --minify",
-		"build:lib": "npm run generate-assets && tsup --config tsup.config.ts",
-		"dev": "npm run generate-assets && concurrently \"tsup --watch\" \"http-server -p 8080 -c-1\"",
-		"generate-assets": "node scripts/generate-assets.cjs",
+		"build": "tsup --minify",
+		"dev": "concurrently \"tsup --watch\" \"http-server -p 8080 -c-1\"",
 		"lint-and-format": "npx @biomejs/biome check --write --unsafe",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -39,10 +24,6 @@
 		"type": "git",
 		"url": "https://github.com/remojansen/remojansen.github.io"
 	},
-	"peerDependencies": {
-		"@xterm/xterm": "^6.0.0",
-		"three": "^0.182.0"
-	},
 	"devDependencies": {
 		"@types/three": "^0.182.0",
 		"concurrently": "^9.2.1",
@@ -53,6 +34,7 @@
 	"dependencies": {
 		"@types/stats.js": "^0.17.4",
 		"@xterm/xterm": "^6.0.0",
+		"cool-retro-term-renderer": "^1.0.0",
 		"stats.js": "^0.17.0",
 		"three": "^0.182.0"
 	}
